--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-        <svg class="header-wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 200">
-            <path d="M 0,100 C 150,200 350,0 500,100 L 500,200 L 0,200"></path>
-        </svg>
+        <svg class="header-wave" xmlns="http://www.w3.org/2000/svg" width="100%" height="100" viewBox="0 0 500 100">
+            <path d="M 0,60 C 100,0 400,0 500,60 S 900,120 1000,60 L 1000,100 L 0,100"></path>
+        </svg>              
         <img src="assets/randomPic.jpeg" alt="Imran Maslianov">
         <h1>Imran Maslianov</h1>
         <p>3168 boul. Chèvremont, H9C2W5 | +1(438) 408-5713 | maslianov.imran@gmail.com</p>
