--- a/index.html
+++ b/index.html
@@ -27,11 +27,19 @@
     <section id="experience">
         <h2>Work Experience</h2>
         <div class="job">
-            <h3>03/2020 - 04/2022</h3>
-            <h4>Associate Cashier, Winners | Kirkland, QC</h4>
+            <h3>01/2024 - Present</h3>
+            <h4>IT-Technician, RCMP-internship | Westmount, QC</h4>
             <ul>
-                <li>Engaged positively with each customer, providing professional and polite sales and service support.</li>
-                <li>Managed cash register operations using the Point of Sale system and processed sales and returns.</li>
+                <li>Provided desktop support to personnel, troubleshooting hardware and software issues, and ensuring smooth operation of computer systems.</li>
+                <li>Managed user accounts and permissions on the Active Directory server, ensuring security and access control.</li>
+                <li>Performed routine hardware maintenance to optimize performance and reliability of computer systems.</li>
+            </ul>
+        </div>
+        <div class="job">
+            <h3>11/2023 - Present</h3>
+            <h4>Store Associate, IKEA | Montreal, QC</h4>
+            <ul>
+                <li>Positively engaged with every customer, providing professional and courteous support for sales and service needs.</li>
                 <li>Applied strong problem-solving and interpersonal skills to resolve conflicts.</li>
             </ul>
         </div>
@@ -42,6 +50,14 @@
                 <li>Provided individualized assistance to students with special needs in the classroom.</li>
                 <li>Facilitated instruction in small groups and activities for students with varying skill levels.</li>
                 <li>Helped create and maintain a safe and orderly learning environment.</li>
+            </ul>
+        </div>
+        <div class="job">
+            <h3>03/2020 - 04/2022</h3>
+            <h4>Associate Cashier, Winners | Kirkland, QC</h4>
+            <ul>
+                <li>Engaged positively with each customer, providing professional and polite sales and service support.</li>
+                <li>Managed cash register operations using the Point of Sale system and processed sales and returns.</li>
             </ul>
         </div>
     </section>
